--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,14 +27,14 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Install dependencies
-    - run: npm ci
+      run: npm ci
     
     - name: Run lint
-    - run: npm run lint
+      run: npm run lint
     
     - name: Run the tests
-    - run: npm run test
+      run: npm run test
     
     - name: Build
-    - run: npm run build --if-present
+      run: npm run build --if-present
 
