--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
       run: npm run lint
     
     - name: Run the tests
-      run: npm run test
+      run: npm run test:prod
     
     - name: Build
       run: npm run build --if-present
