--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "expo-blur": "~11.0.0"
+    "expo-blur": "~11.0.0",
+    "@react-native-segmented-control/segmented-control": "2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
