--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,6 +35,8 @@ jobs:
     - name: Run the tests
       run: npm run test:prod
     
-    - name: Build
-      run: npm run build --if-present
+    - name: Codecov
+      uses: codecov/codecov-action@v2.1.0
+      with:
+        directory: ./coverage
 
